@@ -70,6 +70,8 @@ Older versions than 3.0 can be found at http://svn.communesplone.org/svn/commune
 - Removed MeetingConfig.getMeetingsAcceptingItemsAdditionalManagerStates, use the config.MEETING_STATES_ACCEPTING_ITEMS
   to know in which states a meeting may accept items.  Use also config.MEETING_STATES_ACCEPTING_ITEMS instead
   Meeting.acceptItemsStates that was removed as well.
+- Use TransitionEvent instead ObjectEvent as base class for MeetingAfterTransitionEvent and ItemAfterTransitionEvent
+  so we have transition and old_state/new_state infos on the event instance.
 
 4.0 (2017-08-04)
 ----------------
